// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PensionDetailAccordions should render when group is GREEN and pension type is DB 1`] = `
<div>
  <div
    class="mt-10 *:mb-10 last:*:mb-0"
  >
    <details
      class="group border-t-1 border-b-1 mb-[-1px] border-slate-400 tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-pink-600 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-select-focus text-[19px] hover:underline font-semibold justify-start gap-2"
      >
        <svgr-mock
          classname="group-open:rotate-[-180deg] text-pink-600 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          pages.pension-details.information.about.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px]"
      >
        pages.pension-details.information.about.description
      </div>
    </details>
    <details
      class="group border-t-1 border-b-1 mb-[-1px] border-slate-400 tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-pink-600 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-select-focus text-[19px] hover:underline font-semibold justify-start gap-2"
      >
        <svgr-mock
          classname="group-open:rotate-[-180deg] text-pink-600 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          pages.pension-details.information.how-estimate-is-calculated.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px]"
      >
        pages.pension-details.information.how-estimate-is-calculated.db
      </div>
    </details>
  </div>
</div>
`;

exports[`PensionDetailAccordions should render when group is GREEN and pension type is DC 1`] = `
<div>
  <div
    class="mt-10 *:mb-10 last:*:mb-0"
  >
    <details
      class="group border-t-1 border-b-1 mb-[-1px] border-slate-400 tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-pink-600 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-select-focus text-[19px] hover:underline font-semibold justify-start gap-2"
      >
        <svgr-mock
          classname="group-open:rotate-[-180deg] text-pink-600 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          pages.pension-details.information.about.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px]"
      >
        pages.pension-details.information.about.description
      </div>
    </details>
    <details
      class="group border-t-1 border-b-1 mb-[-1px] border-slate-400 tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="text-pink-600 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-select-focus text-[19px] hover:underline font-semibold justify-start gap-2"
      >
        <svgr-mock
          classname="group-open:rotate-[-180deg] text-pink-600 shrink-0 w-5 mr-2"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          pages.pension-details.information.how-estimate-is-calculated.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px]"
      >
        pages.pension-details.information.how-estimate-is-calculated.dc
      </div>
    </details>
  </div>
</div>
`;
